Doc : ajout de la documentation pour les commandes
